# replaygate

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DECISIONS.md  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/actions/replay-gate/: action.yml
.github/workflows/: ci.yml
examples/: __init__.py
examples/temporal/: __init__.py  fixture_workflows.py  generate_histories.py  replaygate.corrupted.yaml  replaygate.pass.yaml  replaygate.unknown.yaml  replaygate.yaml  workflows.py  workflows_breaking.py
examples/temporal/expected/: report.corrupted.html  report.corrupted.json  report.corrupted.md  report.fail.html  report.fail.json  report.fail.md  report.pass.html  report.pass.json  report.pass.md  report.unknown.html  report.unknown.json  report.unknown.md
examples/temporal/histories/: legacy_history.json  payment_history.json  refund_history.json
replaygate/: __init__.py  cli.py  config.py  models.py  policy.py  privacy.py  risk.py  runtime.py  runtime_metadata.py  verifier.py
replaygate/adapters/: base.py  registry.py
replaygate/adapters/temporal/: __init__.py  adapter.py  classifier.py  loader.py  models.py  replayer.py
replaygate/reporting/: console.py  html_report.py  json_report.py  markdown_report.py  view_models.py
replaygate/reporting/static/: report.css  report.js
replaygate/reporting/templates/: report.html.j2
tests/: support.py
tests/golden/: test_snapshots.py
tests/integration/: test_temporal_verify.py
tests/unit/: test_cli.py  test_config.py  test_policy.py  test_reporting.py  test_temporal_loader.py  test_verifier.py
(+4 files in other folders)
