[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "replay-gate"
version = "0.1.0"
description = "Change-safety verification for durable workflow deployments"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Replay Gate MVP" }
]
dependencies = [
  "jinja2>=3.1.4,<4.0.0",
  "pydantic>=2.8.2,<3.0.0",
  "pyyaml>=6.0.2,<7.0.0",
  "rich>=13.7.1,<14.0.0",
  "typer>=0.12.3,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.1,<2.0.0",
  "pytest>=8.3.2,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.5.7,<1.0.0",
  "types-PyYAML>=6.0.12.20250516,<7.0.0",
]
temporal = [
  "temporalio>=1.8.0,<2.0.0",
]

[project.scripts]
replay-gate = "replaygate.cli:app"

[tool.setuptools.packages.find]
include = ["replaygate*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
strict = true
packages = ["replaygate"]

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true
